--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,6 +19,8 @@
     <% if (!hideLayout) { %>
         <link rel="stylesheet" href="/CSS/style.css">
         <link rel="stylesheet" href="/CSS/profil.css">
+        <link rel="stylesheet" href="/CSS/listingEmployee.css">
+        <link rel="stylesheet" href="/CSS/addEmployee.css">
         <link rel="stylesheet" href="/CSS/navbar.css">
         <link rel="stylesheet" href="/CSS/footer.css">
         <link rel="stylesheet" href="/CSS/employeeCard.css">
